--- a/Translations/The Coatinc Company Holding GmbH.g.xlf
+++ b/Translations/The Coatinc Company Holding GmbH.g.xlf
@@ -303,6 +303,36 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Pro. W. Receipts API - Control blockedLocationCode - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Page 2488227719 - Control 2157071436 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup-from Address</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Pro. W. Receipts API - Control coPickupFromAddress - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 2488227719 - Control 2766983739 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup-from City</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Pro. W. Receipts API - Control coPickupFromCity - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 2488227719 - Control 2263259115 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup-from Name</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Pro. W. Receipts API - Control coPickupFromName - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 2488227719 - Control 1555043853 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup-from Name 2</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Pro. W. Receipts API - Control coPickupFromName2 - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 2488227719 - Control 304064410 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup-from Postal Code</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Pro. W. Receipts API - Control coPickupFromPostalCode - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 2488227719 - Control 1966483814 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup-to Ctry/Reg. Code</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Pro. W. Receipts API - Control coPickupToCtryRegCode - Property Caption</note>
+        </trans-unit>
         <trans-unit id="Page 2488227719 - Control 326003978 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Correction</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -697,6 +727,51 @@
           <source>Blocked Location Code</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Whse. Receipts API - Control blockedLocationCode - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1922438980 - Control 633495604 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Whse. Receipts API - Control coPickup - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1922438980 - Control 2157071436 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup-from Address</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Whse. Receipts API - Control coPickupFromAddress - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1922438980 - Control 2766983739 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup-from City</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Whse. Receipts API - Control coPickupFromCity - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1922438980 - Control 4071934830 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup-from Date</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Whse. Receipts API - Control coPickupFromDate - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1922438980 - Control 2263259115 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup-from Name</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Whse. Receipts API - Control coPickupFromName - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1922438980 - Control 1555043853 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup-from Name 2</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Whse. Receipts API - Control coPickupFromName2 - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1922438980 - Control 304064410 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup-from Postal Code</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Whse. Receipts API - Control coPickupFromPostalCode - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1922438980 - Control 1966483814 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Pickup-to Ctry/Reg. Code</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Whse. Receipts API - Control coPickupToCtryRegCode - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1922438980 - Control 749568357 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>CO Responsibility Center</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Whse. Receipts API - Control coResponsibilityCenter - Property Caption</note>
         </trans-unit>
         <trans-unit id="Page 1922438980 - Control 943136216 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Create Assembly Order</source>
@@ -1443,6 +1518,11 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCC Sales Order CO Whse - Control CO Whse. Receip - Property Caption</note>
         </trans-unit>
+        <trans-unit id="PageExtension 3415156606 - Control 3056029483 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 225437410">
+          <source>Warehouse Receipt</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCCCOCoatincSetup - Control WarehouseReceipt - Property Caption</note>
+        </trans-unit>
         <trans-unit id="PageExtension 3979214416 - Change 747683197 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1566602949">
           <source>Release</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -1452,6 +1532,21 @@
           <source>Select value,Empty</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCCResponsibilityCenter - Control User Name for User Tasks - Method OnAssistEdit - NamedType AssistLbl</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3415156606 - Field 3588303830 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 225437410">
+          <source>Document Status for Approve Additional Costs</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension TCCCOCoatincSetup - Field Doc. Status Approve Add. Costs - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3415156606 - Field 476628945 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 225437410">
+          <source>Document Status for Customer Contacted</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension TCCCOCoatincSetup - Field Doc. Status Customer Contacted - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3415156606 - Field 2693873350 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 225437410">
+          <source>Document Status for Reject Additional Costs</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension TCCCOCoatincSetup - Field Doc. Status Reject Add. Costs - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 4072668533 - Field 1267408499 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 2247850105">
           <source>Account nr</source>
