--- a/Translations/The Coatinc Company Holding GmbH.de-DE.xlf
+++ b/Translations/The Coatinc Company Holding GmbH.de-DE.xlf
@@ -693,16 +693,14 @@
         </trans-unit>
         <trans-unit id="Page 2488227719 - Control 3721440749 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Status set at</source>
-          <target>[NAB: NOT TRANSLATED]</target>
+          <target>Status Gesetzt am</target>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="NAB AL Tool Refresh Xlf" annotates="general" priority="3">New translation.</note>
           <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Pro. W. Receipts API - Control statusSetAt - Property Caption</note>
         </trans-unit>
         <trans-unit id="Page 2488227719 - Control 1599541067 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Status set by User ID</source>
-          <target>[NAB: NOT TRANSLATED]</target>
+          <target>Status Gesetst beim</target>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="NAB AL Tool Refresh Xlf" annotates="general" priority="3">New translation.</note>
           <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Pro. W. Receipts API - Control statusSetByUserId - Property Caption</note>
         </trans-unit>
         <trans-unit id="Page 1944399023 - Property 3446740159" size-unit="char" translate="yes" xml:space="preserve">
@@ -1262,14 +1260,12 @@
           <source>Status set at</source>
           <target>Status Gesetzt am</target>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="NAB AL Tool Refresh Xlf" annotates="general" priority="3">New translation.</note>
           <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Whse. Receipts API - Control statusSetAt - Property Caption</note>
         </trans-unit>
         <trans-unit id="Page 1922438980 - Control 1599541067 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Status set by User ID</source>
           <target>Status Gesetst beim</target>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="NAB AL Tool Refresh Xlf" annotates="general" priority="3">New translation.</note>
           <note from="Xliff Generator" annotates="general" priority="3">Page MuM GR Whse. Receipts API - Control statusSetByUserId - Property Caption</note>
         </trans-unit>
         <trans-unit id="Report 1439077842 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
@@ -1793,7 +1789,6 @@
           <source>Good Receipt Number</source>
           <target>Warenannahem nr.</target>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="NAB AL Tool Refresh Xlf" annotates="general" priority="3">New translation.</note>
           <note from="Xliff Generator" annotates="general" priority="3">Report TCC Weight Cart - ReportLabel GoodReceiptNoLbl</note>
         </trans-unit>
         <trans-unit id="Report 3353495132 - ReportLabel 2963208439" size-unit="char" translate="yes" xml:space="preserve">
@@ -1886,6 +1881,20 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Report TCC Weight Cart - ReportLabel YourRefLbl</note>
         </trans-unit>
+        <trans-unit id="PageExtension 3427310952 - Control 314882735 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 280137910">
+          <source>Created By</source>
+          <target>Erstellt von</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="NAB AL Tool Refresh Xlf" annotates="general" priority="3">Suggested translation inserted.</note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCC Extended Sales Header - Control CreatedByUserName - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3427310952 - Control 400145264 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 280137910">
+          <source>Modified By</source>
+          <target>Geändert von</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="NAB AL Tool Refresh Xlf" annotates="general" priority="3">Suggested translation inserted.</note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCC Extended Sales Header - Control ModifiedByUserName - Property Caption</note>
+        </trans-unit>
         <trans-unit id="PageExtension 2687291263 - Action 485918120 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 3413085212">
           <source>Order Confirmation</source>
           <target>Auftragsbestätigung</target>
@@ -1908,7 +1917,6 @@
           <source>Weight Cart</source>
           <target>Wiege Karte</target>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="NAB AL Tool Refresh Xlf" annotates="general" priority="3">New translation.</note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCC Print Goods Receipts Label - Action TCC Weight Cart - Property Caption</note>
         </trans-unit>
         <trans-unit id="PageExtension 1247649385 - Control 598818045 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1673401186">
@@ -1923,6 +1931,12 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCC Sales Order CO Whse - Control CO Whse. Receip - Property Caption</note>
         </trans-unit>
+        <trans-unit id="PageExtension 3415156606 - Control 3056029483 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 225437410">
+          <source>Warehouse Receipt</source>
+          <target>Wareneingang</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCCCOCoatincSetup - Control WarehouseReceipt - Property Caption</note>
+        </trans-unit>
         <trans-unit id="PageExtension 3979214416 - Change 747683197 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1566602949">
           <source>Release</source>
           <target>Freigeben</target>
@@ -1933,8 +1947,25 @@
           <source>Select value,Empty</source>
           <target>Wert auswählen,Leer</target>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="NAB AL Tool Refresh Xlf" annotates="general" priority="3">New translation.</note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCCResponsibilityCenter - Control User Name for User Tasks - Method OnAssistEdit - NamedType AssistLbl</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3415156606 - Field 3588303830 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 225437410">
+          <source>Document Status for Approve Additional Costs</source>
+          <target>Dokumentstatus zur Genehmigung zusätzlicher Kosten</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension TCCCOCoatincSetup - Field Doc. Status Approve Add. Costs - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3415156606 - Field 476628945 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 225437410">
+          <source>Document Status for Customer Contacted</source>
+          <target>Dokumentstatus für Kundenkontakt hergestellt</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension TCCCOCoatincSetup - Field Doc. Status Customer Contacted - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3415156606 - Field 2693873350 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 225437410">
+          <source>Document Status for Reject Additional Costs</source>
+          <target>[Dokumentstatus zur Ablehnung zusätzlicher Kosten</target>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension TCCCOCoatincSetup - Field Doc. Status Reject Add. Costs - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 4072668533 - Field 1267408499 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 2247850105">
           <source>Account nr</source>
@@ -1964,14 +1995,12 @@
           <source>User ID for User Tasks</source>
           <target>Bezuter ID für Aufgabe</target>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="NAB AL Tool Refresh Xlf" annotates="general" priority="3">New translation.</note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension TCCResponsibilityCenter - Field User ID for User Tasks - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 4072668533 - Field 3653774230 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 2247850105">
           <source>User Name for User Tasks</source>
           <target>Bezuter Name für Aufgabe</target>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="NAB AL Tool Refresh Xlf" annotates="general" priority="3">New translation.</note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension TCCResponsibilityCenter - Field User Name for User Tasks - Property Caption</note>
         </trans-unit>
         <trans-unit id="EnumExtension 2337007556 - EnumValue 1517649600 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Enum 1178123344">
