--- a/Translations/The Coatinc Company Holding GmbH.g.xlf
+++ b/Translations/The Coatinc Company Holding GmbH.g.xlf
@@ -1533,6 +1533,16 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCCResponsibilityCenter - Control User Name for User Tasks - Method OnAssistEdit - NamedType AssistLbl</note>
         </trans-unit>
+        <trans-unit id="TableExtension 4007689046 - Field 3818038736 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1192395785">
+          <source>Created By</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension TCC Sales Header Ext - Field Created By Name - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 4007689046 - Field 3545580527 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1192395785">
+          <source>Modified By</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension TCC Sales Header Ext - Field Modified By Name - Property Caption</note>
+        </trans-unit>
         <trans-unit id="TableExtension 3415156606 - Field 3588303830 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 225437410">
           <source>Document Status for Approve Additional Costs</source>
           <note from="Developer" annotates="general" priority="2"></note>
